; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_35953.c_GetWindowsVersion.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_35953.c_GetWindowsVersion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetWindowsVersion() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %5 = call i32 (...) @GetVersion()
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @LOWORD(i32 %6)
  %8 = call i64 @HIBYTE(i32 %7)
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @LOWORD(i32 %10)
  %12 = call i64 @LOBYTE(i32 %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp eq i32 %14, 1
  br i1 %15, label %16, label %20

16:                                               ; preds = %0
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 %17, 5
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 1, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %16, %0
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %21, 1
  br i1 %22, label %23, label %27

23:                                               ; preds = %20
  %24 = load i32, i32* %4, align 4
  %25 = icmp eq i32 %24, 6
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32 2, i32* %1, align 4
  br label %27

27:                                               ; preds = %26, %23, %20
  %28 = load i32, i32* %3, align 4
  %29 = icmp eq i32 %28, 2
  br i1 %29, label %30, label %34

30:                                               ; preds = %27
  %31 = load i32, i32* %4, align 4
  %32 = icmp eq i32 %31, 5
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  store i32 3, i32* %1, align 4
  br label %34

34:                                               ; preds = %33, %30, %27
  %35 = load i32, i32* %1, align 4
  ret i32 %35
}

declare dso_local i32 @GetVersion(...) #1

declare dso_local i64 @HIBYTE(i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i64 @LOBYTE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
